--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vanilla-extract/css-utils": "^0.1.4",
     "@vanilla-extract/vite-plugin": "^4.0.11",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
